exports[`test renders the same as before with no slots 1`] = `
<div>
  <h3>
    Today 
    1999-01-01
  </h3>
  <p
    className="message">
    No slots available
  </p>
</div>
`;

exports[`test renders the same as before with two slots 1`] = `
<div>
  <h3>
    Today 
    1999-01-01
  </h3>
  <button>
    book
  </button>
  <button>
    book
  </button>
</div>
`;
